- Slightly optimized/cleaned up palette code and also fixed a bug where overriding palette entries would not get rid of the original palette data
- Bugfixes on multibuilding scattered features
- Worked on the oilrig
- Small optimization avoid object creation for too many randoms
- Fixed a bug where creating multiple customized profiles from the same MC instance might not work correctly

1.18-5.3.2:
- More diagnostics to check a problem with pregenerating chunks

1.18-5.3.1:
- Now the registry system properly supports namespaces. Default namespace is 'lostcities'

1.18-5.3.0:
- Various improvements to the configuration GUI. The preview is now larger too
- Removed several config options that no longer work or are no longer relevant
- Cleaned up a lot of code
- The spawn configuration options are back
- Added forceSpawnInBuilding to force the spawn inside a building (might fail if there is no building near spawn)
- New feature where you can specify rubble blocks for a building. These will be used instead of the filler block but only for when buildings are damaged and spill over in adjacent chunks
- New 'variant' asset type where you can define sets of blocks that can then be used in palettes. This makes defining different palettes easier
- All assets are now converted to datapack objects. This totally changes the way you can reconfigure Lost Cities
- Expanded the worldstyle asset type with a new 'citychancemultipliers' section that allows you to specify biomes where cities should spawn less or more
- The city biome factors have been removed from the profile. This is now better handled in the asset system (worldstyle)
- The standard worldstyle avoids rivers slightly and oceans a bit more

1.18-5.2.6:
- New system to control city rarity based on perlin maps. If the cityChance setting is -1 then cityPerlinScale and cityPerlinOffset will be used for a more natural city style