@@ -40,9 +40,9 @@
       "xxxxxxxxxxxxxxxx"
     ],
     [
-      " D              ",
-      " D              ",
-      " Dj             ",
+      " D           qqq",
+      " D           qqq",
+      " Dj          qqq",
       " D     m        ",
       " uDDDDDnD::D    ",
       ":D     m   D    ",
@@ -58,9 +58,9 @@
       "   ll :: ::     "
     ],
     [
-      " D              ",
-      " D              ",
-      " Dj             ",
+      " D           qqq",
+      " D           q4q",
+      " Dj          qqq",
       " D              ",
       " uDDDDDOD::D    ",
       ":w         D    ",
@@ -76,9 +76,9 @@
       "      :: ::     "
     ],
     [
-      " D              ",
-      " D              ",
-      " Dj             ",
+      " D           qqq",
+      " D           qqq",
+      " Dj          qqq",
       " D              ",
       " uDDDDDDD::D    ",
       ":D         D    ",
@@ -115,17 +115,17 @@
       "                ",
       " ::::           ",
       " :Vm            ",
-      " ::::           ",
-      " =======        ",
-      "       =        ",
-      "       2        ",
-      "       =        ",
-      " =======        ",
-      "                ",
+      " ::::   u^u^u^u ",
+      " =======^     ^ ",
+      "       =u III u ",
+      "       2^ IJI ^ ",
+      "       =u III u ",
+      " =======^     ^ ",
+      "        u^u^u^u ",
       "                ",
       "                ",
       " u3u u3u u3u    ",
-      " 3 3 3 3 3 3    ",
+      " 3M3 3M3 3M3    ",
       " u3u u3u u3u    ",
       "                "
     ],
@@ -133,17 +133,17 @@
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "                ",
-      "       2        ",
-      "                ",
-      "                ",
-      "                ",
+      "        u^u^u^u ",
+      "        ^     ^ ",
+      "        u III u ",
+      "       2^ IJI ^ ",
+      "        u III u ",
+      "        ^     ^ ",
+      "        u^u^u^u ",
       "                ",
       "                ",
       " u2u u2u u2u    ",
-      " 2 2 2 2 2 2    ",
+      " 2M2 2M2 2M2    ",
       " u2u u2u u2u    ",
       "                "
     ],
@@ -151,49 +151,31 @@
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "                ",
-      "       2        ",
-      "                ",
-      "                ",
-      "                ",
+      "        u^u^u^u ",
+      "        ^     ^ ",
+      "        u III u ",
+      "       2^ IJI ^ ",
+      "        u III u ",
+      "        ^     ^ ",
+      "        u^u^u^u ",
       "                ",
       "                ",
       " === === ===    ",
+      " =0= =0= =0=    ",
       " === === ===    ",
-      " === === ===    ",
       "                "
     ],
     [
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "      ^^^       ",
-      "  3   ^2^       ",
-      "      ^^^       ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                "
-    ],
-    [
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "      w&w       ",
-      "  :   & &       ",
-      "      w&w       ",
-      "                ",
-      "                ",
+      "        000[[00 ",
+      "        0     0 ",
+      "      ^^u III [ ",
+      "  3   ^2^ IJI 0 ",
+      "      ^^u III 0 ",
+      "        0     0 ",
+      "        00000[0 ",
       "                ",
       "                ",
       "                ",
@@ -205,31 +187,13 @@
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "      ===       ",
-      "  :   =2=       ",
-      "      ===       ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                "
-    ],
-    [
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "  :::::2|       ",
-      "                ",
-      "                ",
-      "                ",
+      "        u^u^u^u ",
+      "        ^     ^ ",
+      "      w&w III u ",
+      "  :   & & IJI ^ ",
+      "      w&w III u ",
+      "        ^     ^ ",
+      "        u^u^u^u ",
       "                ",
       "                ",
       "                ",
@@ -241,13 +205,31 @@
       "                ",
       "                ",
       "                ",
+      "        u^u^u^u ",
+      "        ^     ^ ",
+      "      ==u III u ",
+      "  :   =2u IJI ^ ",
+      "      ==u III u ",
+      "        ^     ^ ",
+      "        u^u^u^u ",
       "                ",
       "                ",
       "                ",
       "                ",
       "                ",
+      "                "
+    ],
+    [
       "                ",
       "                ",
+      "                ",
+      "         :   :  ",
+      "        ::::::: ",
+      "         :000:  ",
+      "  :::::2|:000:  ",
+      "         :000:  ",
+      "        ::::::: ",
+      "         :   :  ",
       "                ",
       "                ",
       "                ",
@@ -261,9 +243,9 @@
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "                ",
+      "           3    ",
+      "          3 3   ",
+      "           3    ",
       "                ",
       "                ",
       "                ",
@@ -279,9 +261,45 @@
       "                ",
       "                ",
       "                ",
+      "           &    ",
+      "          & &   ",
+      "           &    ",
       "                ",
       "                ",
       "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                "
+    ],
+    [
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "           3    ",
+      "          3 3   ",
+      "           3    ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                "
+    ],
+    [
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "                ",
+      "           :    ",
+      "          :u:   ",
+      "           :    ",
       "                ",
       "                ",
       "                ",
@@ -298,25 +316,7 @@
       "                ",
       "                ",
       "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                "
-    ],
-    [
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
-      "                ",
+      "           :    ",
       "                ",
       "                ",
       "                ",
