@@ -7,6 +7,8 @@ Upcoming:
 - Worked on the oilrig
 - Small optimization avoid object creation for too many randoms
 - Fixed a bug where creating multiple customized profiles from the same MC instance might not work correctly
+- New option during world creation to enable edit mode. This allows usage of the new /lostcities editpart command
+- Expanded the oilrig
 
 1.18-5.3.2:
 - More diagnostics to check a problem with pregenerating chunks
